--- a/package.json
+++ b/package.json
@@ -11,12 +11,7 @@
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^9.19.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.3",
-    "nodemon": "^3.1.9",
-    "prettier": "^3.4.2",
-    "sequelize-cli": "^6.6.2"
+    "nodemon": "^3.1.9"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
